# klayout-vector-file-export-cli

./: .gitignore  README.md  pyproject.toml
.github/: release.yml
.github/workflows/: ci-cd.yml  github-release.yml  publish-pypi.yml
klayout_vector_export/: __init__.py  __main__.py  cli_wrapper.py  version.py
